--- a/app/src/main/res/layout/activity_widgets.xml
+++ b/app/src/main/res/layout/activity_widgets.xml
@@ -57,6 +57,14 @@
 
     </RadioGroup>
 
+    <Switch
+        android:layout_marginTop="20dp"
+        android:id="@+id/switch_button"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Dark Theme"/>
+
 
 
 
